--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,9 @@ services:
     container_name: laravel-app
     restart: unless-stopped
     working_dir: /var/www
-    volumes:
-      - .:/var/www
-    networks:
-      - laravel
+    ports:
+      - 8000 : 8000
+
 
   mysql:
     image: mysql:5.7
