--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     working_dir: /var/www
     ports:
       - "8000:8000"
-
+    networks:
+      - laravel
 
   mysql:
     image: mysql:5.7
