--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,22 @@ services:
       dockerfile: Dockerfile
     image: laravel-app
     container_name: laravel-app
+    restart: unless-stopped
     working_dir: /var/www
-    ports:
-      - 80:8000
+    volumes:
+      - .:/var/www
     networks:
       - laravel
 
   mysql:
     image: mysql:5.7
     container_name: mysql
+    restart: unless-stopped
     environment:
       MYSQL_DATABASE: laravel
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: laravel
-      MYSQL_PASSWORD:
+      MYSQL_PASSWORD: secret
     ports:
       - "3306:3306"
     volumes:
