update docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,36 @@
-version: "3.9"
+version: '3.8'
 
-# Define the services that make up the application
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: your_laravel_app_image
+    container_name: laravel_app
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/var/www
+    networks:
+      - laravel
+    
+  db:
+    image: mysql:5.7
+    container_name: mysql_db
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+    networks:
+      - laravel
 
-    # Webserver service configuration
-    webserver:
-        build: .
-        container_name: webserver
-        ports:
-            - 8000:80
-        volumes:
-          - ./:/var/www/html  # Mount the current directory to the container's /var/www/html
-          - /var/www/html/vendor  # Mount the /var/www/html/vendor directory
-        depends_on:
-            - db  # Depend on the db service
+networks:
+  laravel:
 
-    # Database service configuration
-    db:
-        image: mysql:latest
-        container_name: db
-        volumes:
-            - data:/var/lib/mysql  # Mount a volume for MySQL data storage
-        ports:
-            - 3306:3306  # Expose port 3306 for MySQL
-        environment:
-            - MYSQL_ROOT_PASSWORD=root  # Set MySQL root password
-            - MYSQL_DATABASE=laravel  # Create a database named "todos"
-
-    # Artisan service configuration
-    artisan:
-        build: .
-        container_name: artisan
-        entrypoint: ["php", "/var/www/html/artisan"]  # Set the entrypoint to run artisan commands
-        volumes:
-            - ./:/var/www/html  # Mount the current directory to the container's /var/www/html
-            - /var/www/html/vendor  # Mount the /var/www/html/vendor directory
-
-    # PhpMyAdmin service configuration
-    phpmyadmin:
-        image: phpmyadmin:latest
-        container_name: phpmyadmin
-        depends_on:
-            - db  # Depend on the db service
-        ports:
-            - 8001:80  # Expose port 8001 for PhpMyAdmin
-        environment:
-            - PMA_ARBITRARY=1
-            - PMA_HOST=mysql
-
-# Define a named volume for MySQL data storage
 volumes:
-    data:
+  mysql-data:
