--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,21 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: your_laravel_app_image
-    container_name: laravel_app
+    image: laravel-app
+    container_name: laravel-app
+    working_dir: /var/www
     ports:
-      - "8000:8000"
-    volumes:
-      - .:/var/www
+      - 8000:8000
     networks:
       - laravel
-    
-  db:
+
+  mysql:
     image: mysql:5.7
-    container_name: mysql_db
+    container_name: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
-      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: laravel
       MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
