--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,8 @@ services:
     container_name: mysql
     environment:
       MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_PASSWORD: 123456
     ports:
       - "3306:3306"
     volumes:
