--- a/.env.example
+++ b/.env.example
@@ -43,9 +43,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1850400
-PUSHER_APP_KEY=872dc161a0dbc3cb89b8
-PUSHER_APP_SECRET=da70dd12d3954ffc1a4e
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
